--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "waifu"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 
 [dependencies]
 reqwest = { version = "0.12", features = ["blocking", "json"] }
 serde = { version = "1", features = ["derive"] }
-serde_json = "1"
 crossterm = "0.27"
-
+zeroize = "1.7"
+bytes = "1.5"
